fix: token usage color in dark mode

--- a/src/renderer/src/assets/styles/index.scss
+++ b/src/renderer/src/assets/styles/index.scss
@@ -136,7 +136,8 @@ ul {
   }
   .message-user {
     color: var(--chat-text-user);
-    .message-content-container-user .anticon {
+    .message-content-container-user .anticon,
+    .message-tokens {
       color: var(--chat-text-user) !important;
     }
 
